[package]
name = "teamrank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = true, features = ["alloc"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }